tests/valid/global_variables/forward_declaration.rs
/*
executionExitCode: 3
*/

foo: i64;

main(): i32 {
    return foo;
}

foo: i64 = 3;